# remsh

./: .gitignore  AUTHORS  COPYING  MANIFEST.in  Makefile  README.txt  index.html  master.py  remsh-slave  setup.cfg  setup.py  simpleamp.py  slave.py  slavemgr.py  test.sh  vimrc-test
c/: AUTHORS  COPYING  Makefile.am  autogen  configure.ac  main.c
c/lib/: Makefile.am  remsh.h  slave-ops.c  util.c  util.h  wire.c  xport-fd.c
c/test/: Makefile.am  slave-op-set-cwd.c  testutils.c  testutils.h  wire.c  xport-fd.c
doc/: conf.py  developer.rst  doc-upload.sh  help.rst  index.rst  running_a_slave.rst  slave_collections.rst  slave_listeners.rst  slaves.rst  upload-docs.sh  using.rst  using_remsh.rst
doc/developer/: amp.rst  ops.rst  python.rst  rpc.rst  stack.rst
doc/using/: ops.rst  slave_listeners.rst
docs/0.5/: developer.html  genindex.html  help.html  index.html  introduction.html  objects.inv  running_a_slave.html  search.html  searchindex.js  slave_collections.html  slave_listeners.html  slaves.html  using.html  using_remsh.html
docs/0.6/: developer.html  genindex.html  help.html  index.html  introduction.html  objects.inv  running_a_slave.html  search.html  using.html
docs/latest/: developer.html  genindex.html  help.html  index.html  introduction.html  objects.inv  (+4 more)
py/: COPYING  MANIFEST.in  README.txt  setup.py
remsh/: interfaces.py  simpleamp.py  slavecollection.py  slavelistener.py  slavemgr.py  wire.py
scripts/: remsh  remsh-slave
test/: test_amp_rpc.py  test_amp_wire.py  test_ops.py  test_wire.py  test_xport_local.py
util/: vimrc-test
(+53 files in other folders)
