# This file is part of remsh
# Copyright 2009 Dustin J. Mitchell
# See COPYING for license information

AC_INIT([remsh], latest) # SUBST-VERSION
AM_INIT_AUTOMAKE([foreign no-define])
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL
AC_PROG_CC

AC_CONFIG_FILES(Makefile lib/Makefile test/Makefile)

AC_OUTPUT
